--- a/midterm-project/details.css
+++ b/midterm-project/details.css
@@ -9,9 +9,9 @@ body {
 
 .container {
     max-width: 800px;
-    margin: 0 auto;
+    margin: 40px auto;
     padding: 40px;
-    background-color: #948c8c;
+    background: linear-gradient(0deg, #202324bb, #4e4e86b6 50%, #635468ce);
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -25,7 +25,7 @@ header {
 
 h1 {
     font-size: 2.5rem;
-    color: #030f22;
+    color: #f8f8f8;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -36,6 +36,44 @@ h1 {
     background-color: #f4f4f4;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+
+button {
+    padding: 0.8em 1.8em;
+    box-shadow: 0px 0px 0px 4px rgba(180, 160, 255, 0.253);
+    position: relative;
+    overflow: hidden;
+    background-color: transparent;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 16px;
+    transition: .3s;
+    z-index: 1;
+    font-family: inherit;
+    color: #979797;
+   }
+   
+   button::before {
+    content: '';
+    width: 0;
+    height: 300%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(30deg);
+    background: #afb6b5;
+    transition: .5s ease;
+    display: block;
+    z-index: -1;
+   }
+   
+   button:hover::before {
+    width: 110%;
+   }
+   
+   button:hover {
+    color: #111;
+   }
+   
 
 footer {
     font-size: 0.9rem;
