--- a/midterm-project/post.css
+++ b/midterm-project/post.css
@@ -1,5 +1,49 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 body {
   background-color: #212121;
   font-family: 'Poppins', sans-serif;
@@ -8,17 +52,21 @@ body {
 }
 
 .page-title {
+  display: grid;
+  grid-template-columns: auto auto;
   font-family: 'Poppins';
-  font-size: 40px;
+  font-size: 60px;
   font-weight: bold;
+  margin: auto;
 }
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #ccc;
+  border: 1px solid #8d8383;
   border-radius: 5px;
-  background-color: #333;
+  background: linear-gradient(0deg, #202324bb, #4e4e86b6 50%, #635468ce);
 }
 
 .products-container {
@@ -34,9 +82,9 @@ body {
 .product {
   width: 150px;
   margin: 20px;
+  height: 250px;
   padding: 20px 20px 40px 20px;
   background-color: #fff;
-  height: 225px;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
   background: #c4bdbd;
 
@@ -49,37 +97,67 @@ body {
   height: auto;
 }
 
-.product .url {
+.product .product-link {
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   text-decoration: none;
   font-size: 13px;
   color: #00587a;
 }
 
-.product .url:hover {
+.product .product-link :hover {
   text-decoration: underline;
+}
+.u {
+  margin-top: 10px;
 }
 
 #SearchBar {
   padding: 10px;
   border: none;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   font-size: 17px;
   border-radius: 5px;
 }
 
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: 2px solid;
+  outline: none;
+  background-color: rgb(71, 66, 66);
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  box-shadow: 0px 0px 0px 4px rgba(180, 160, 255, 0.253);
+  background-color: #3d2074;
+}
+
 @media (max-width: 768px) {
+
+  .page-title {
+    display: block;
+  }
 
   .products-container {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto auto auto;
     gap: 5px;
   }
 
   .product {
     width: 150px;
-    height: 200px;
+    height: 210px;
+    padding: 10px;
   }
+
 }
 
 @media (max-width: 430px) {
@@ -93,7 +171,29 @@ body {
 
   .product {
     width: 100px;
-    height: 150px;
+    height: 200px;
   }
 
+  .product .product-link {
+    font-size: 10px;
+  }
+}
+
+@media (max-width:375px) {
+
+  .container {
+    align-items: center;
+  }
+
+  .products-container {
+    margin: 0;
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+  }
+
+  .product {
+    width: 80px;
+    height: 160px;
+  }
 }
